app/assets/stylesheets/buttons.scss
.see_more_button {
    float: none;
    clear: left;
    margin-top: 20px;
    border-radius: 10px;
    background: $darkgrey;
    padding: 15px 0px 10px;


    h3 {
      color: white;
      text-align: center;
      color: white;
    }

    &:hover {
      background: #2d2d2d;

      h3 {
        color: $green;
      }
    }
  }

  .go-back, .go-to {
    margin:0px 0 40px !important;
    color: white;
    width: 170px !important;
    text-align: center;


    h3 {
      font-family: Helvetica-Bold;
      font-size: 1.2em;
    }
  }

  .go-to {
    width: 250px !important;
    margin:20px 0 40px !important;
  }

  .popup {
    float: left;
    clear: none;
    display: block;
    width: 22%;
    margin: 30px 0 0px 4%;
  }

  .three-per-line {
    width: 30%;
    margin-left: 10;
  }

/* Go Back to Top Button */

.go-top, .scroll {
  display: inline-block;
  padding: 5px 10px;
  line-height: 35px;
  text-align: center;
  font-size: 30px;
  position: fixed;
  bottom: -40px;
  right: 20px;
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -o-transition: all 1s ease;
  transition: all 1s ease;
  background-color: #404040;
  color: #FFFFFF;
  text-decoration: none;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  border-radius: 5px;
  font-size: 1em;
}

.scroll-right {
  bottom: -40px;
  right: 20px;
}

.scroll-left {
  bottom: -40px;
  left: 20px;
}

.go-top.show { bottom: 20px; }
.scroll.show { bottom: 200px; }

.go-top:hover, .scroll:hover {
  background-color: $green;
  color: #FFFFFF;
}

